--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <h3 class="senior-name">❤️😍❤️</h3>
                      </div>
                      <div class="senior-card">
-                          <img src="images\8.png" alt="Senior Image" class="senior-image">
+                          <img src="images\8.jpg" alt="Senior Image" class="senior-image">
                           <h3 class="senior-name">❤️😍❤️</h3>
                       </div>
                       <!-- Add more senior cards as needed -->
